@startuml
title Dataflow - PII and Data Retention

left to right direction
scale 0.82
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam linetype ortho
skinparam shadowing false
skinparam packageStyle rectangle
skinparam packageTitleFontSize 12
skinparam componentStyle rectangle
skinparam nodesep 28
skinparam ranksep 38

skinparam package {
  Padding 10
}

skinparam note {
  FontSize 10
  Padding 6
}

package "Stays4Pilgrims System" {
  package "Stays4Pilgrims Frontend (Flutter/Web)" as Frontend {
    queue "User Input\nCredentials, Profile, Reviews" as FE_INPUT
  }

  package "Stays4Pilgrims Backend (NestJS)" as Backend {
    component "Auth Service\n[Hash passwords - bcrypt]" as AUTH
    component "Accounts Service\n[Email, Name, Password]" as ACC
    component "Accommodations Service\n[Address, Contact Info]" as AccommodationService
    component "Comments Service\n[Rating, Text]" as COMMENTS
    component "Gallery Service\n[Image URLs, metadata]" as GALLERY
    component "Contact Service\n[Name, Email, Phone, Message]" as CONTACT
  }

  database "PostgreSQL" as DB {
    entity "accounts\n(id, email, password_hash,\nname, phone, isEmailVerified,\ncreatedAt)" as TBL_ACC
    entity "Accommodations\n(id, Accommodation_name, address,\nphone, email, website,\naccount_id)" as TBL_Accommodations
    entity "comments\n(id, text, rating,\naccountId, AccommodationId,\nstatus, createdAt)" as TBL_COMMENTS
    entity "gallery_photos\n(id, url, accountId,\nAccommodationId, status)" as TBL_GALLERY
  }

  package "External Services" {
    queue "Email Service\n[Verification, Contact, Moderation Emails]" as EMAIL_SVC
    queue "Storage (S3/Local)\n[Image Binary Data]" as STORAGE
  }

  package "Backups & Archive" {
    database "Daily Backup (encrypted)\n24-month retention" as BACKUP
    queue "Audit Logs\n(indefinite retention)" as AUDIT
  }
}

FE_INPUT --> AUTH: credentials
FE_INPUT --> CONTACT: contact form payload
AUTH --> TBL_ACC: hash + store
ACC --> TBL_ACC: name, email, phone
AccommodationService --> TBL_Accommodations: address, contact
COMMENTS --> TBL_COMMENTS: text, rating
GALLERY --> TBL_GALLERY: URLs
CONTACT --> EMAIL_SVC: forward contact request
EMAIL_SVC <--> ACC: verification flows
EMAIL_SVC <--> COMMENTS: moderation decision emails
EMAIL_SVC <--> AccommodationService: moderation decision emails
STORAGE <-- GALLERY: image uploads
DB --> BACKUP: nightly snapshot
DB --> AUDIT: all queries logged

note right of TBL_ACC
  PII: email, phone, password_hash
  Retention: Active accounts - lifetime
  Deleted accounts - anonymized after 30 days
end note

note right of TBL_Accommodations
  PII: phone, email, address
  Retention: While Accommodation is active
  Archived Accommodations - retained 12 months
end note

note right of EMAIL_SVC
  Verification: 24h transient tokens
  Contact and moderation emails include
  user identity, Accommodation name and optional reason
  Logs: Deleted after completion
end note

note right of STORAGE
  Images: CDN cache 7 days,
  Archive: indefinite
end note

@enduml

